--- a/index.html
+++ b/index.html
@@ -28,14 +28,29 @@
               class="fa-solid fa-envelope header-image"
               style="color: #ed6226"
             ></i>
-            <h5 style="margin-left: 5px; font-size: 15px; margin-top: 20px">
+            <h5
+              style="
+                margin-left: 5px;
+                font-size: 15px;
+
+                font-weight: 300;
+              "
+            >
               info@company.com
             </h5>
           </div>
           <div class="vl"></div>
           <div class="text2 content-row">
             <i class="fa-solid fa-map header-image" style="color: #ed6226"></i>
-            <h5 style="margin-left: 5px; font-size: 15px; margin-top: 20px">
+            <h5
+              style="
+                margin-left: 5px;
+                font-size: 15px;
+
+                font-weight: 300;
+                white-space: nowrap;
+              "
+            >
               Sunny Isles beach , FL 33160
             </h5>
           </div>
@@ -57,7 +72,7 @@
       </div>
       <div class="hl"></div>
       <div class="head2 head2-s head2-l">
-        <div class="page-title">
+        <div class="page-title page-title-s">
           <h3 style="font-family: Georgia, 'Times New Roman', Times, serif">
             VILLA
           </h3>
@@ -81,20 +96,22 @@
           <div>
             <div class="calender">
               <div class="calender-circle">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
-                  stroke="currentColor"
-                  class="size-6"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M6.75 2.994v2.25m10.5-2.25v2.25m-14.252 13.5V7.491a2.25 2.25 0 0 1 2.25-2.25h13.5a2.25 2.25 0 0 1 2.25 2.25v11.251m-18 0a2.25 2.25 0 0 0 2.25 2.25h13.5a2.25 2.25 0 0 0 2.25-2.25m-18 0v-7.5a2.25 2.25 0 0 1 2.25-2.25h13.5a2.25 2.25 0 0 1 2.25 2.25v7.5m-6.75-6h2.25m-9 2.25h4.5m.002-2.25h.005v.006H12v-.006Zm-.001 4.5h.006v.006h-.006v-.005Zm-2.25.001h.005v.006H9.75v-.006Zm-2.25 0h.005v.005h-.006v-.005Zm6.75-2.247h.005v.005h-.005v-.005Zm0 2.247h.006v.006h-.006v-.006Zm2.25-2.248h.006V15H16.5v-.005Z"
-                  />
-                </svg>
+                <div class="calender-image">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="size-6"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M6.75 2.994v2.25m10.5-2.25v2.25m-14.252 13.5V7.491a2.25 2.25 0 0 1 2.25-2.25h13.5a2.25 2.25 0 0 1 2.25 2.25v11.251m-18 0a2.25 2.25 0 0 0 2.25 2.25h13.5a2.25 2.25 0 0 0 2.25-2.25m-18 0v-7.5a2.25 2.25 0 0 1 2.25-2.25h13.5a2.25 2.25 0 0 1 2.25 2.25v7.5m-6.75-6h2.25m-9 2.25h4.5m.002-2.25h.005v.006H12v-.006Zm-.001 4.5h.006v.006h-.006v-.005Zm-2.25.001h.005v.006H9.75v-.006Zm-2.25 0h.005v.005h-.006v-.005Zm6.75-2.247h.005v.005h-.005v-.005Zm0 2.247h.006v.006h-.006v-.006Zm2.25-2.248h.006V15H16.5v-.005Z"
+                    />
+                  </svg>
+                </div>
                 <a
                   href="Schedule a visit"
                   class="navbar-items"
@@ -122,7 +139,6 @@
           <a href="#slider-1"></a>
           <a href="#slider-2"></a>
           <a href="#slider-3"></a>
-          <a href="#slider-4"></a>
         </div>
       </div>
       <div class="arrows arrow-left">
@@ -135,15 +151,15 @@
           src="assets/arrow_forward_ios_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.svg"
         />
       </div>
-      <div>
+      <div class="slider-text">
         <div class="section-2-text section-2-text-s">
           <div>Toronto,</div>
           <div class="sub-heading">Canada</div>
         </div>
-      </div>
-      <div class="overlay-text overlay-text-s">
-        HURRY!<br />GET THE BEST <br />
-        VILLA FOR YOU
+        <div class="overlay-text overlay-text-s">
+          HURRY!<br />GET THE BEST <br />
+          VILLA FOR YOU
+        </div>
       </div>
     </section>
 
@@ -151,11 +167,11 @@
     <section class="section-3">
       <div class="container-3 container-3-s">
         <div class="grid-1 column grid-1-s">
-          <div class="main-image main-image-m">
+          <div class="main-image main-image-m main-image-s">
             <img src="assets/featured.jpg" />
-          </div>
-          <div class="image-container">
-            <img src="assets/rocket-lunch.svg" class="extra-icon" />
+            <div class="image-container">
+              <img src="assets/rocket-lunch.svg" class="extra-icon" />
+            </div>
           </div>
         </div>
         <div class="grid-2 grid-2-s grid-2-m column">
@@ -184,7 +200,7 @@
             <h2>Why is villa agency the best?</h2>
           </div>
         </div>
-        <div class="grid-3 grid-3-s column">
+        <div class="grid-3 grid-3-s grid-3-m column">
           <div class="cl-3">
             <div class="grid-3-cl-3-rw-1 col-2">
               <img src="assets/info-icon-01.png" />
@@ -250,7 +266,7 @@
       </div>
     </section>
     <!--section-5-->
-    <section class="section-5" style="padding: 40px; padding-top: 200px">
+    <section class="section-5">
       <div class="details">
         <div class="rw-5">
           <div class="rw-5-cl-1 rw-5-cl-1-s">
@@ -318,29 +334,29 @@
         style="padding-top: 20px"
       >
         <div class="r-7-cl-1 sec-7-row">
-          <div class="sec-7-col-1-row">
-            <p>Total floor space</p>
-            <h2>185m2</h2>
+          <div class="sec-7-col-1-row sec-7-col-1-row-s">
+            <div><p>Total floor space</p></div>
+            <div><h2>185m2</h2></div>
           </div>
           <div class="hl"></div>
-          <div class="sec-7-col-1-row">
-            <p>floor number</p>
-            <h2>26th</h2>
+          <div class="sec-7-col-1-row sec-7-col-1-row-s">
+            <div><p>floor number</p></div>
+            <div><h2>26th</h2></div>
           </div>
           <div class="hl"></div>
-          <div class="sec-7-col-1-row">
-            <p>number of rooms</p>
-            <h2>4</h2>
+          <div class="sec-7-col-1-row sec-7-col-1-row-s">
+            <div><p>number of rooms</p></div>
+            <div><h2>4</h2></div>
           </div>
           <div class="hl"></div>
-          <div class="sec-7-col-1-row">
-            <p>parking available</p>
-            <h2>yes</h2>
+          <div class="sec-7-col-1-row sec-7-col-1-row-s">
+            <div><p>parking available</p></div>
+            <div><h2>yes</h2></div>
           </div>
           <div class="hl"></div>
-          <div class="sec-7-col-1-row">
-            <p>payement process</p>
-            <h2>Bank</h2>
+          <div class="sec-7-col-1-row sec-7-col-1-row-s">
+            <div><p>payement process</p></div>
+            <div><h2>Bank</h2></div>
           </div>
         </div>
         <div class="r-7-cl-2 r-7-cl-2-s sec-7-row">
@@ -358,24 +374,26 @@
           </p>
           <div class="calender">
             <div class="calender-circle">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="currentColor"
-                class="size-6"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M6.75 2.994v2.25m10.5-2.25v2.25m-14.252 13.5V7.491a2.25 2.25 0 0 1 2.25-2.25h13.5a2.25 2.25 0 0 1 2.25 2.25v11.251m-18 0a2.25 2.25 0 0 0 2.25 2.25h13.5a2.25 2.25 0 0 0 2.25-2.25m-18 0v-7.5a2.25 2.25 0 0 1 2.25-2.25h13.5a2.25 2.25 0 0 1 2.25 2.25v7.5m-6.75-6h2.25m-9 2.25h4.5m.002-2.25h.005v.006H12v-.006Zm-.001 4.5h.006v.006h-.006v-.005Zm-2.25.001h.005v.006H9.75v-.006Zm-2.25 0h.005v.005h-.006v-.005Zm6.75-2.247h.005v.005h-.005v-.005Zm0 2.247h.006v.006h-.006v-.006Zm2.25-2.248h.006V15H16.5v-.005Z"
-                />
-              </svg>
+              <div class="calender-image">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-6"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M6.75 2.994v2.25m10.5-2.25v2.25m-14.252 13.5V7.491a2.25 2.25 0 0 1 2.25-2.25h13.5a2.25 2.25 0 0 1 2.25 2.25v11.251m-18 0a2.25 2.25 0 0 0 2.25 2.25h13.5a2.25 2.25 0 0 0 2.25-2.25m-18 0v-7.5a2.25 2.25 0 0 1 2.25-2.25h13.5a2.25 2.25 0 0 1 2.25 2.25v7.5m-6.75-6h2.25m-9 2.25h4.5m.002-2.25h.005v.006H12v-.006Zm-.001 4.5h.006v.006h-.006v-.005Zm-2.25.001h.005v.006H9.75v-.006Zm-2.25 0h.005v.005h-.006v-.005Zm6.75-2.247h.005v.005h-.005v-.005Zm0 2.247h.006v.006h-.006v-.006Zm2.25-2.248h.006V15H16.5v-.005Z"
+                  />
+                </svg>
+              </div>
               <a
                 href="Schedule a visit"
-                class="navbar-items"
-                style="margin-top: 0px"
+                class="navbar-items normal-text"
+                style="margin-top: 0px; font-weight: 500; margin-top: 7px"
                 >Schedule a visit</a
               >
             </div>
@@ -388,7 +406,9 @@
     <div class="section-8">
       <div class="container-8">
         <div class="section-8-heading section-8-heading-s">
-          <p class="sub-heading"><b>|PROPERTIES</b></p>
+          <p class="sub-heading" style="padding: 0px 40%">
+            <b>|PROPERTIES</b>
+          </p>
           <h1 style="font-size: 40px; margin-top: 20px">
             We Provide The Best<br />
             Property You'd Like
@@ -690,14 +710,14 @@
               <div class="cont-10-box-1 cont-10-box">
                 <img src="assets/phone-icon.png" />
                 <div>
-                  <div class="">01068605</div>
+                  <div class="contact-info">01068605</div>
                   <div class="">Phone number</div>
                 </div>
               </div>
               <div class="cont-10-box-2 cont-10-box">
                 <img src="assets/email-icon.png" />
                 <div>
-                  <div class="">info@villa.co</div>
+                  <div class="contact-info">info@villa.co</div>
                   <div class="">Business Email</div>
                 </div>
               </div>
@@ -707,13 +727,30 @@
             <div class="box-11 box-11-s">
               <div class="box-11-content">
                 <p>Full Name</p>
-                <textarea> Your Name</textarea>
+                <input
+                  type="text"
+                  placeholder="Enter your name"
+                  class="form-text"
+                />
                 <p>Email Address</p>
-                <textarea> Your e-mail</textarea>
+                <input
+                  type="text"
+                  placeholder="Enter your email"
+                  class="form-text"
+                />
                 <p>Subject</p>
-                <textarea>Subject</textarea>
+                <input
+                  type="text"
+                  placeholder="Enter subject"
+                  class="form-text"
+                />
                 <p>Message</p>
-                <textarea class="message-textarea"> Your Message </textarea>
+                <textarea
+                  id="message"
+                  rows="8"
+                  cols="12"
+                  placeholder="Your message"
+                ></textarea>
                 <button>Send Message</button>
               </div>
             </div>
