--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
           <img src="assets/pexels-pixabay-280229.jpg" />
           <div class="banner-text-3 banner-text-3-s">
             <p class="sub-heading"><b>| CONTACT US</b></p>
-            <h1 style="color: white; font-size: 50px">
+            <h1 style="color: white">
               Get In Touch With <br />
               Our Agents
             </h1>
