--- a/index.html
+++ b/index.html
@@ -28,14 +28,7 @@
               class="fa-solid fa-envelope header-image"
               style="color: #ed6226"
             ></i>
-            <h5
-              style="
-                margin-left: 5px;
-                font-size: 15px;
-
-                font-weight: 300;
-              "
-            >
+            <h5 style="margin-left: 5px; font-size: 15px; font-weight: 300">
               info@company.com
             </h5>
           </div>
@@ -46,7 +39,6 @@
               style="
                 margin-left: 5px;
                 font-size: 15px;
-
                 font-weight: 300;
                 white-space: nowrap;
               "
@@ -422,7 +414,7 @@
           </div>
           <div class="cont-9-det-1">
             <div class="box-head">Luxury villa</div>
-            <div class="box-money">$2.264000</div>
+            <div class="box-money">$2,264000</div>
           </div>
           <div class="cont-9-det-2">18 New Street Miami, OR 97219</div>
           <div class="cont-9-det-3">
@@ -461,7 +453,7 @@
           </div>
           <div class="cont-9-det-1">
             <div class="box-head">Luxury villa</div>
-            <div class="box-money">$2.264000</div>
+            <div class="box-money">$2,264000</div>
           </div>
           <div class="cont-9-det-2">18 New Street Miami, OR 97219</div>
           <div class="cont-9-det-3 property-details">
@@ -500,7 +492,7 @@
           </div>
           <div class="cont-9-det-1">
             <div class="box-head">Luxury villa</div>
-            <div class="box-money">$2.264000</div>
+            <div class="box-money">$2,264000</div>
           </div>
           <div class="cont-9-det-2">18 New Street Miami, OR 97219</div>
           <div class="cont-9-det-3">
@@ -539,7 +531,7 @@
           </div>
           <div class="cont-9-det-1">
             <div class="box-head">Luxury villa</div>
-            <div class="box-money">$2.264000</div>
+            <div class="box-money">$2,264000</div>
           </div>
           <div class="cont-9-det-2">18 New Street Miami, OR 97219</div>
           <div class="cont-9-det-3">
@@ -578,7 +570,7 @@
           </div>
           <div class="cont-9-det-1">
             <div class="box-head">Luxury villa</div>
-            <div class="box-money">$2.264000</div>
+            <div class="box-money">$2,264000</div>
           </div>
           <div class="cont-9-det-2">18 New Street Miami, OR 97219</div>
           <div class="cont-9-det-3">
@@ -617,7 +609,7 @@
           </div>
           <div class="cont-9-det-1">
             <div class="box-head">Luxury villa</div>
-            <div class="box-money">$2.264000</div>
+            <div class="box-money">$2,264000</div>
           </div>
           <div class="cont-9-det-2">18 New Street Miami, OR 97219</div>
           <div class="cont-9-det-3">
